# python-tspart

./: .gitignore  .readthedocs.yaml  MANIFEST.in  MANIFEST.in.template  README.md  README.md.template  README_pypi.md  README_pypi.md.template  build.bat  build.bat.template  build_docs.bat  build_pypi.bat  build_pypi.bat.template  environment.yml  environment.yml.template  init.bat  init.py  install_conda_windows.bat  name.py.template  pyproject.toml  pyproject.toml.template  python-tspart.py  tspart.ipynb
.github/workflows/: publish-pypi-release.yml
docs/src/: conf.py  conf.py.template  genindex.rst  index.rst  index.rst.template
src/module_name/: __init__.py.template  calculator.py  core.py  version.yml.template
src/module_name/constants/: defaults.py  links.py.template  resources.py
src/module_name/helpers/: core.py
src/tspart/: __init__.py  _draw.py  _files.py  _helpers.py  _image.py  _scripts.py  _stippler.py  _transform.py  _tsp.py  draw.py  files.py  image.py  main.py  neos.py  studio.py  tsp.py  version.yml  voronoi.py  vstipple.py
src/tspart/_constants/: __init__.py
src/tspart/constants/: __init__.py  enums.py  links.py  modinfo.py
src/tspart/helpers/: __init__.py
tests/: baboon.tspart  baboon_500.tspart  baboon_500_CMYK.tspstudio  baboon_500_L.tspstudio  baboon_500_RGB.tspstudio  baboon_500_gray.tspart  baboon_500_raw.tspart  baboon_500_rgb.tspart  bliss_10000.json  bliss_10000_k.tsp  bliss_25000.jobs  bliss_25000_CMYK.tspstudio  bliss_25000_c.cyc  bliss_25000_k.cyc  bliss_25000_k.tsp  bliss_25000_m.cyc  bliss_25000_y.cyc  bliss_25000_y.tsp  bliss_5000_c.tsp  bliss_5000_m.tsp  bliss_5000_y.tsp  bliss_c.tsp  bliss_k.tsp  bliss_m.tsp  bliss_y.tsp  ella_35000.jobs  ella_35000_CMYK.tspstudio  ella_circle_35000.jobs  ella_circle_35000_CMYK.tspstudio  test100.tsp
