 [build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tspart"
dynamic = ["version", "description"]
readme = "README.md"
license= {file = "LICENSE"}
authors = [
    {name = "Ella Jameson", email = "ellagjameson@gmail.com"}
]

classifiers = []
dependencies = [
    "scipy",
    "numpy"
]

[project.urls]
homepage = "https://github.com/nimaid/python-tspart"
repository = "https://github.com/nimaid/python-tspart"
documentation = "https://tspart.readthedocs.io/en/latest/index.html"
issues = "https://github.com/nimaid/python-tspart/issues"

[project.scripts]
tspart = "tspart:run"
