 [build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tspart"
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.10"
license= {file = "LICENSE"}
authors = [
    {name = "Ella Jameson", email = "ellagjameson@gmail.com"}
]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion"
]
dependencies = [
    "scipy",
    "numpy",
    "etatime",
    "Pillow",
    "ortools"
]

[project.urls]
homepage = "https://github.com/nimaid/python-tspart"
repository = "https://github.com/nimaid/python-tspart"
documentation = "https://tspart.readthedocs.io/en/latest/index.html"
issues = "https://github.com/nimaid/python-tspart/issues"
